--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 /* External CSS Stylesheet for Recipes Page */
 
-.background {
+.green {
     background-color: rgb(0, 255, 55);
+}
+
+.blue {
+    background-color: blue;
+}
+
+.red {
+    background-color: red;
 }
 
 .heading {
@@ -9,3 +17,16 @@
     font-weight: bold;
 }
 
+h1 {
+    color: red
+}
+
+h2 {
+    color: blue
+}
+
+p,
+ul,
+ol {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
